# Agent-Handoff-Protocol

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  adk_adapter.py  crewai_adapter.py  langgraph_adapter.py  smolagents_adapter.py
demos/: demo_full_pipeline.py
src/agent_handoff_protocol/: __init__.py  broker.py  cli.py  packet.py  serializer.py  validator.py
tests/: __init__.py  test_adapters.py  test_audit.py  test_broker.py  test_concurrency.py  test_packet.py  test_serializer.py  test_ttl.py  test_validator.py
