[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-handoff-protocol"
version = "0.1.0"
description = "A standard protocol for passing state between agents in multi-agent systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Daksh Jain", email = "dakshjain1616@gmail.com"}
]
keywords = ["agents", "multi-agent", "handoff", "protocol", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.0.50"]
crewai = ["crewai>=0.30.0"]
adk = ["google-adk>=0.1.0"]
smolagents = ["smolagents>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "langgraph>=0.0.50",
    "crewai>=0.30.0",
    "google-adk>=0.1.0",
    "smolagents>=0.1.0",
]

[project.scripts]
handoff-cli = "agent_handoff_protocol.cli:cli"

[project.urls]
Homepage = "https://github.com/dakshjain-1616/agent-handoff-protocol"
Documentation = "https://github.com/dakshjain-1616/agent-handoff-protocol#readme"
Repository = "https://github.com/dakshjain-1616/agent-handoff-protocol"
Issues = "https://github.com/dakshjain-1616/agent-handoff-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_handoff_protocol"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
